# msys2_powershell

./: .gitignore  README.md  msys2_shell.cmd  pyproject.toml
msys2_wrapper/: args.py  find_msys2.py  help.py  helper.py  launch_args.py  main.py  parse_args.py  shell_env.py  start_shell.py
