[project]
name = "msys2-wrapper"
version = "2025.3.3.0"
description = "start msys2 without bat"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
msys2w = "msys2_wrapper.main:main"


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
ignore-vcs = true
packages = ["msys2_wrapper"]
exclude = ["__pycache__", "*.pyc", "*.exe", "*.exe~", "*.syso"]

[tool.hatch.build.targets.wheel]
ignore-vcs = true
packages = ["msys2_wrapper"]
exclude = ["__pycache__", "*.pyc", "*.exe~", "*.syso"]